# chess

./: .ghci  chess.cabal
src/: Chess.hs
src/Chess/: Piece.hs  PieceColour.hs  PieceType.hs  ShowC.hs
