Name:               chess
Version:            0.0.1
License:            BSD3
License-File:       LICENSE
Author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
Maintainer:         Tony Morris
Copyright:          Tony Morris
Synopsis:           An API for the game of chess
Category:           Games
Description:        An API for the game of chess
Homepage:           https://github.com/tonymorris/chess
Cabal-Version:      >= 1.6
Build-Type:         Simple

Source-Repository   head
  Type:             git
  Location:         git@github.com:tonymorris/chess.git

Flag                small_base
  Description:      Choose the new, split-up base package.

Library
  Build-Depends:
                    base < 5 && >= 3

  GHC-Options:
                    -Wall

  Hs-Source-Dirs:
                    src

  Exposed-Modules:
                    Chess
                    Chess.Piece
                    Chess.PieceColour
                    Chess.PieceType

